services/api-python/infra/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idp-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: idp-api
  template:
    metadata:
      labels:
        app: idp-api
    spec:
      containers:
        - name: api
          image: idp-api:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
