services/api-python/infra/k8s/workerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idp-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: idp-worker
  template:
    metadata:
      labels:
        app: idp-worker
    spec:
      containers:
        - name: worker
          image: idp-worker:latest
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
