services/api-python/infra/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idp-api-service
spec:
  selector:
    app: idp-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
