services/api-python/infra/k8s/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idp-ingress
spec:
  rules:
    - host: idp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idp-api-service
                port:
                  number: 80
